--- a/Doku/XML Linking Language (XLink) Version 1.1.html
+++ b/Doku/XML Linking Language (XLink) Version 1.1.html
@@ -1392,6 +1392,20 @@ div count(bestandteile/bestandteil), '###,###,##0.00')"/&gt; %&lt;/strong&gt;
 <hr />
 <div class="div1">
 <h2><a name="erweiterungen" id="erweiterungen"/>9 Mögliche Erweiterungen und Einsatzgebiete</h2>
+<p>Da dieses Projekt nur in einem begrenztem Rahmen durchgeführt werden konnte gibt es natürlich noch mögliche Erweiterungen und Verbesserungen.</p>
+<p>Für einen umgreifenderen Einsatzbereich könnte die Anwendung statt nur Smartphones, Tablets und Handys auch andere elektronische Geräte miteinbeziehen. Es wäre dann möglich zum Beispiel auch alte Haushaltsgeräte wie Mixer, Waschmaschinen, Staubsauger etc. mit der Anwendung zu verwalten.</p>
+<p>Desweiteren könnte eine mobile Applikation in Form einer App entwickelt werden, in der der Benutzer alle seine Geräte verwalten kann und ihm Informationen zu den Bestandteilen und Recyclinggrad zur Verfügung stellt. Es würde auch leicht realisierbar sein dem Nutzer Information über die Entsorgung wie die Anzeige eines zum Gerät passenden Recyclinghofs in der näheren Umgebung mitzuteilen.</p> 
+<p>Durch weitere Aufnahme von Daten zur Herstellung der Geräte wie zum Beispiel CO2 Emmssionen, die bei der Produktion eines Stücks entstehen oder logistische Informationen wie den Vertriebsweg usw. könnte auch die Nachhaltigkeit eines Gerätes errechnet werden. Der Nutzer hat im Grunde eine Art Info-Portal in dem er sieht wie Nachhaltig sein Gerät produziert wurde und wo er es wenn es defekt ist abgeben könnte.</p> 
+<p>Die Aufnahme der folgenden Daten wären durchaus denkbar:</p>
+<p>
+<ul>
+  <li>Informationen über die CO2 Emmissionen bei der Produktion und Logistik</li>
+  <li>Daten über die Rohstoffegewinnung des Produkts. Unter welchen Umständen wurde ein Bestandteil gefördert?</li>
+  <li>Produktionsdaten: Wo, Wie, Wann wurde das Gerät hergestellt? Könnte der Benutzer dadurch inländische Unternehmen unterstützen.</li>
+  <li>Weitere Herstellerinformationen wie Unternehmensgröße, Umsatz usw.</li>
+</ul>
+</p>
+<p>Auch einfache Features würden der aktuellen Applikation einen Mehrwert bieten. Das hinzufügen einer Suche, oder das Darstellen einer Karte wo sich der nächstgelegene Recyclinghof befindet wären durchaus sinnvolle Erweiterungen.</p>
 </div> 
 <hr />
 <div class="div1">
